--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -76,6 +76,20 @@ table {
 	background-color: #FFF;	
 	padding: 10px 40px;
 	margin-top: 10px;
+	border-top: 1px solid #cccaaa;
+}
+
+#footer-links {
+	float: left;
+	text-align: center;
+	width: 500px;
+	padding: 10px;		
+}
+
+#footer-links span a {
+	text-decoration: none;
+	font-size: 11px;
+	margin-right: 20px;	
 }
 
 #flash_notice, #flash_error, #flash_alert, #flash_success {
