added about page

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,1 +1,35 @@
 <% title "About :: #{TITLE}", true%>
+
+<div class="static-para">
+	ClaimVille helps you and your friend find your missing money or property which you can claim right away. 
+	Currently there is $2.2 billion in cash and other valuables waiting for all the Texas residents to be claimed. 
+	If you have ever lived in Texas, you should definitely search and find your money. 
+	You can use our social logins and search all your friends, to find their money and play the game to see who wins. 
+</div>
+<div class="static-para">
+	ClaimVille is a child of <a href="http://appsfortexas.org/">AppsForTexas</a> (http://appsfortexas.org/) an initiative to 
+	leverage citizens talent to develop Apps for Texas.The initial plan was to host a contest of building apps up on 
+	Open Data but we put it on hold, to prove how and what we can do with Open Data.
+</div>
+<br>
+<div class="static-title">
+	Team:
+</div>
+<div class="static-para">
+	<a href="http://www.linkedin.com/in/praneethpatlola" target="_blank" title="linkedin profile" style="text-decoration:none;color:#000000;">
+	Praneeth Patlola</a>, The Creator  - A bootstrapper/developer currently based in Austin,TX loves creating innovative products 
+	to solve frustrating pain points.<br>
+	He has ventured in the startup world with variety of technology products XpressTalkies, GiGumes, Unecloud. He consults to 
+	variety of IT shops and Startups to build processes & products. He has a vast experience in cloud solutions and bar business.
+	He loves to play racket ball & volley ball. If you are an active networker in Austin area, you might already met him in either
+	at coffee shop or at any startup events. 
+</div>
+<div class="static-para">
+	Disclaimer: We are not a Private Investigation firm or individual who takes % to find your money or property rather, 
+	we are just people who love Open Data & are passionate about helping people with better technology.
+</div>
+<div class="static-para">
+	<a href="http://www.linkedin.com/in/praneethpatlola">
+		<img src="http://www.linkedin.com/img/webpromo/btn_profile_greytxt_80x15.png" width="80" height="15" border="0" alt="View praneeth patlola's profile on LinkedIn">
+	</a>
+</div>
