removed appasfortexas link

--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -7,7 +7,7 @@
 	You can use our social logins and search all your friends, to find their money and play the game to see who wins. 
 </div>
 <div class="static-para">
-	ClaimVille is a child of <a href="http://appsfortexas.org/">AppsForTexas</a> (http://appsfortexas.org/) an initiative to 
+	ClaimVille is a child of <a href="http://appsfortexas.org/">AppsForTexas</a> an initiative to 
 	leverage citizens talent to develop Apps for Texas.The initial plan was to host a contest of building apps up on 
 	Open Data but we put it on hold, to prove how and what we can do with Open Data.
 </div>
